--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -195,7 +195,7 @@
    "outputs": [],
    "source": [
     "#full sample pipeline \n",
-    "#1. lowercase 2. remove non-alphabets 3. remove stopwords 4. lemmatize  \n",
+    "#1. remove non-alphabets 2. lowercase 3. remove stopwords 4. lemmatize  \n",
     "\n",
     "\n",
     "\n",
